# Rag-chatbot

./: .gitignore  LICENSE  README.md  SKILL.md  interview-notes.html  production-rag-local-stack-reference.md  project-plans.html
company_policy_rag/: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  README2.md  README3.md  docker-compose.dockerhub.yml  docker-compose.ghcr.yml  docker-compose.yml  golden_dataset_guidebook.json  pyproject.toml  requirements-docker.txt  requirements.txt
company_policy_rag/.streamlit/: config.toml
company_policy_rag/app/: _ensure_path.py  chat_app.py  streamlit_app.py
company_policy_rag/docker/: entrypoint.sh
company_policy_rag/docs/: _gen_interview_notes.py  followup_answers.py  gen-interview-notes.html  interview-notes.html  project-plans.html  project_timeline.json
company_policy_rag/logs/: evaluation_results.json  human_judge_agreement.json  latency_benchmark.json
company_policy_rag/notebooks/: test_rag.ipynb
company_policy_rag/scripts/: analyze_eval_failures.py  benchmark_latency.py  ci_agent_topic_gate.py  ci_building_block_gate.py  ci_eval_gate.py  ci_tool_code_gate.py  compare_human_judge.py  compare_weak_cases.py  debug_retrieval_case.py  diagnose_code_validation.py  diagnose_index.py  evaluate.py  extract_golden_candidates.py  index_documents.py
company_policy_rag/src/: __init__.py  agent.py  agent_topic_pipeline.py  bm25_index.py  building_block_pipeline.py  chat_service.py  chroma_telemetry.py  chunking.py  citations.py  cli.py  code_retrieval.py  code_validation.py  config.py  diagram_captions.py  docstore.py  document_upload.py  evaluation.py  feedback_store.py  generation.py  human_judge_agreement.py  hybrid_retrieval.py  indexing.py  language.py  memory.py  ollama_client.py  parent_retrieval.py  pdf_images.py  pdf_parsers.py  policy_topic_pipeline.py  postprocessors.py  prompts.py  query_processing.py  retrieval_scope.py  retrieval_trace.py  retriever.py  streaming_generation.py  thinking_extract.py  timing.py  tool_code_pipeline.py  utils.py
company_policy_rag/tests/: conftest.py  test_agent_topic_pipeline.py  test_api.py  test_bm25_index.py  test_building_block_pipeline.py  test_config.py  (+34 more)
(+62 files in other folders)
