[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soubhagya-policy-rag"
version = "0.1.0"
description = "Local RAG chatbot for company policies and legal documents with citations and eval harness."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Soubhagya Jain" },
]
keywords = ["rag", "llamaindex", "chromadb", "ollama", "streamlit", "legal", "policy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "llama-index>=0.12.0",
  "llama-index-core>=0.12.0",
  "llama-index-llms-ollama>=0.4.0",
  "llama-index-embeddings-ollama>=0.4.0",
  "llama-index-readers-file>=0.4.0",
  "llama-index-vector-stores-chroma>=0.4.0",
  "llama-index-postprocessor-sbert-rerank>=0.3.0",
  "sentence-transformers>=3.0.0",
  "chromadb>=0.5.0,<2.0.0",
  "posthog>=2.4.0,<3.0.0",
  "pypdf>=5.0.0",
  "pymupdf>=1.24.0",
  "streamlit>=1.32.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
marker = ["marker-pdf>=1.0.0"]

[project.urls]
Homepage = "https://github.com/SoubhagyaJain/Rag-chatbot"
Repository = "https://github.com/SoubhagyaJain/Rag-chatbot"
Issues = "https://github.com/SoubhagyaJain/Rag-chatbot/issues"
Documentation = "https://github.com/SoubhagyaJain/Rag-chatbot/tree/main/company_policy_rag"

[project.scripts]
policy-rag-index = "src.cli:index_main"
policy-rag-eval = "src.cli:eval_main"
policy-rag-chat = "src.cli:chat_main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"app" = "app"
"scripts" = "scripts"
".streamlit" = ".streamlit"
"data/eval" = "data/eval"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/app",
  "/scripts",
  "/.streamlit",
  "/data/eval",
  "/README.md",
  "/pyproject.toml",
]